--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
--i https://pypi.org/simple
-blinker==1.8.2; python_version >= '3.8'
-click==8.1.7; python_version >= '3.7'
-flask==3.0.3; python_version >= '3.8'
-itsdangerous==2.2.0; python_version >= '3.8'
-jinja2==3.1.4; python_version >= '3.7'
-markupsafe==2.1.5; python_version >= '3.7'
-werkzeug==3.0.3; python_version >= '3.8'
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+packaging==24.1
+Werkzeug==3.0.3
